--- a/config/envs/trial.yaml
+++ b/config/envs/trial.yaml
@@ -58,7 +58,7 @@ console:
 ## KIE Servers BEGIN
 servers:
   ## RANGE BEGINS
-  {{ range $index, $Map := .ServerCount }}
+  #{{ range $index, $Map := .ServerCount }}
   - deploymentConfigs:
       ## KIE server deployment config BEGIN
       - metadata:
@@ -104,6 +104,6 @@ servers:
           name: "{{.ApplicationName}}-h2-claim-{{$index}}"
           annotations:
             delete: "true"
-    {{end}}
+#{{end}}
 ## RANGE ends
 ## KIE Servers END
