ServiceAccount cannot grant permissions it doesn't have
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -6,6 +6,14 @@ rules:
   - apiGroups:
       - ""
     resources:
+      - "*"
+    verbs:
+      - get
+      - list
+      - view
+  - apiGroups:
+      - ""
+    resources:
       - pods
       - services
       - endpoints
